KTitleWidget: Constraint the frame size so it properly aligns

Setting the layout constraint to `SetFixedSize` makes the frame
adapt to the labels size, fixing the wrong vertical alignment.

BUG: 460542